# ping-me

./: .gitignore  README.md  pyproject.toml
src/: cli.py  entrypoint.py
src/ping_me/: __init__.py  api.py  cli.py  entrypoint.py
src/ping_me.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_api.py  test_cli.py
